--- a/pub/proof/tex/macros.tex
+++ b/pub/proof/tex/macros.tex
@@ -5,26 +5,23 @@
 \newcommand{\SHA}{\EMsub{SHA}{256}}
 \newcommand{\MDV}{\EM{MD5}}
 \newcommand{\XOR}{\EM{XOR}}
-\newcommand{\F}[2]{\texttt{#1}(#2)}
+\newcommand{\AND}{\EM{AND}}
+\newcommand{\ROTL}{\EM{ROTL}}
+\newcommand{\ROTR}{\EM{ROTR}}
 \newcommand{\xor}[2]{#1\oplus#2}
-\newcommand{\mod}[2]{#1\ \textbf{mod}\ #2}
-\newcommand{\sha}[1]{\mod{\HSHA{#1}}{2^{n}}}
-\newcommand{\aes}[2]{\mod{\F{\AES}{#1,#2}}{2^{n}}}
-\newcommand{\rsa}[2]{\mod{\F{\RSA}{#1,#2}}{2^{n}}}
+\newcommand{\mtpn}[1]{#1\boldsymbol{\bmod} 2^n}
 
-\newcommand{\TIMO}{TIMO\textsuperscript{\texttrademark}}
-\newcommand{\XORkey}{\textsf{\em X\kern -.05em{\raisebox{.2ex}{$\oplus$}\kern -.15em{R\kern +.05em{\raisebox{-.3ex}{\em key}}}}}}
-\newcommand{\XORlogo}{\textsf{\em X\kern -.05em{\raisebox{.2ex}{$\oplus$}\kern -.15em{R\kern -1.01em{\raisebox{-1.12ex}{\em key}}}}}}
-%\newcommand{\Encr}[2]{\ensuremath{\mathcal{\mathlarger{E}}_{\mathtt{RSA}}(#1,#2)}}
-%\newcommand{\Decr}[2]{\ensuremath{\mathcal{\mathlarger{D}}_{\mathtt{RSA}}(#1,#2)}}
-%\newcommand{\Veri}[2]{\ensuremath{\mathcal{\mathlarger{V}}_{\mathtt{RSA}}(#1,#2)}}
-%\newcommand{\Sign}[2]{\ensuremath{\mathcal{\mathlarger{S}}_{\mathtt{RSA}}(#1,#2)}}
+%\newcommand{\sha}[1]{\mtpn{\HSHA{#1}}}
+%\newcommand{\F}[2]{\texttt{#1}(#2)}
+%\newcommand{\aes}[2]{\mtpn{\F{\AES}{#1,#2}}}
+%\newcommand{\rsa}[2]{\mtpn{\F{\RSA}{#1,#2}}}
 
-\newcommand{\Hsh}[2]{\ensuremath{\mathcal{\mathlarger{H}}_{\mathtt{#1}}(#2)}}
-\newcommand{\Enc}[3]{\ensuremath{\mathcal{\mathlarger{E}}_{\mathtt{#1}}(#2,#3)}}
-\newcommand{\Dec}[3]{\ensuremath{\mathcal{\mathlarger{D}}_{\mathtt{#1}}(#2,#3)}}
-\newcommand{\Ver}[3]{\ensuremath{\mathcal{\mathlarger{V}}_{\mathtt{#1}}(#2,#3)}}
-\newcommand{\Sgn}[3]{\ensuremath{\mathcal{\mathlarger{S}}_{\mathtt{#1}}(#2,#3)}}
+\newcommand{\cryptofunction}[3]{\ensuremath{\mathlarger{\mathcal{#1}}_{\mathtt{#2}}(#3)}}
+\newcommand{\Hsh}[2]{\cryptofunction{H}{#1}{#2}}
+\newcommand{\Enc}[3]{\cryptofunction{E}{#1}{#2,#3}}
+\newcommand{\Dec}[3]{\cryptofunction{D}{#1}{#2,#3}}
+\newcommand{\Ver}[3]{\cryptofunction{V}{#1}{#2,#3}}
+\newcommand{\Sgn}[3]{\cryptofunction{S}{#1}{#2,#3}}
 
 \newcommand{\HSHA}[1]{\Hsh{SHA}{#1}}
 \newcommand{\ERSA}[2]{\Enc{RSA}{#1}{#2}}
@@ -33,6 +30,6 @@
 \newcommand{\VRSA}[2]{\Ver{RSA}{#1}{#2}}
 \newcommand{\EAES}[2]{\Enc{AES}{#1}{#2}}
 \newcommand{\DAES}[2]{\Dec{AES}{#1}{#2}}
-\newcommand{\HSHAm}[1]{\mod{\Hsh{SHA}{#1}}{2^{n}}}
-\newcommand{\EAESm}[2]{\mod{\Enc{AES}{#1}{#2}}{2^{n}}}
-\newcommand{\DRSAm}[2]{\mod{\Dec{RSA}{#1}{#2}}{2^{n}}}
+\newcommand{\HSHAm}[1]{\mtpn{\HSHA{#1}}}
+\newcommand{\EAESm}[2]{\mtpn{\EAES{#1}{#2}}}
+\newcommand{\DRSAm}[2]{\mtpn{\DRSA{#1}{#2}}}
