--- a/pub/proof/tex/proof.tex
+++ b/pub/proof/tex/proof.tex
@@ -1,23 +1,23 @@
 %
 % AUTHOR:		ing. T.M.C. Ruiter
-% COPYRIGHT(c)	2020 by XORkey B.V.
+% COPYRIGHT(c)	2020-2022 by T.M.C. Ruiter
 %
 \input{tex/layout.tex}
 \input{tex/macros.tex}
 \begin{document}
 \begin{titlepage}
-\title{\TIMO - Secure Login without Passwords - Proof}
+\title{\TIMO - Secure Login without Passwords}
 \author{T.M.C. Ruiter}
-\date{jan 2020}
+\date{July 2022}
 \maketitle
 \begin{center}
-\vspace*{-.5em}
-\textbf{XORkey - The key to the Internet}\\
-\vspace{1em}
+%\vspace*{-.5em}
+%\textbf{XORkey - The key to the Internet}\\
+%\vspace{1em}
 \small
-Copyright \copyright\ 2014-2020 by T.M.C. Ruiter, XORkey B.V.\\
-Winterkoning 5 - 1722 CA Zuid-Scharwoude - The Netherlands\\
-+31 6 5376 0646 - hello@xorkey.com
+Copyright \copyright\ 2014-2022 by T.M.C. Ruiter\\
+Terschelling 19 - 1967 EC - Heemskerk - The Netherlands\\
++31 6 536 94 994 - timo.ruiter@dandorid.nl
 \normalsize
 \end{center}
 \end{titlepage}
@@ -25,5 +25,8 @@ Winterkoning 5 - 1722 CA Zuid-Scharwoude - The Netherlands\\
 \includesection{random}
 \includesection{keyring}
 \includesection{login}
+\includesection{keyop}
 \includesection{protocol}
+\bibliographystyle{alpha}
+\bibliography{proof}
 \end{document}
